--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@fortawesome/react-native-fontawesome": "^0.2.4",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.3.3",
-    "@react-navigation/drawer": "^5.4.0",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "buffer": "^5.6.0",
     "react": "16.13.1",
     "react-native": "0.62.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.4.0",
+    "react-native-screens": "^2.7.0",
     "react-native-svg": "^12.1.0",
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.6.0",
