--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-native-fontawesome": "^0.2.4",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.3.0",
     "@react-navigation/bottom-tabs": "^5.3.3",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "axios": "^0.19.2",
     "buffer": "^5.6.0",
     "react": "16.13.1",
     "react-native": "0.62.2",
