--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-screens": "^2.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.0.0",
+    "react-swipeable-views-native": "^0.13.2",
     "realm": "^5.0.5"
   },
   "devDependencies": {
